--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,19 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@keyframes moveTechStack {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-tech-stack {
+  animation: moveTechStack 2s infinite;
+}
