--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,9 +44,8 @@ body {
 
 
 
-/* Add this to your styles */
 .hover-overlay {
-  background: rgba(255, 255, 255, 0.5); /* Adjust the transparency here */
+  background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(8px);
   color: #fff; /* Adjust text color for better visibility */
   padding: 10px; /* Add padding for better visibility */
