--- a/src/styles/flip-card.module.css
+++ b/src/styles/flip-card.module.css
@@ -1,4 +1,3 @@
-/* flip-card.module.css */
 .flip-card {
     width: 400px;
     height: 400px;
@@ -11,6 +10,7 @@
       width: 200px;
       height: 200px;
       perspective: 1000px;
+
     }
 }
   .flip-card-inner {
@@ -35,6 +35,7 @@
   .flip-card-front {
     background: url('/me.webp');
     background-size: cover;
+    z-index: -1;
   }
 
   .flip-card-back {
@@ -42,3 +43,5 @@
     background-size: cover;
     transform: rotateY(180deg);
   }
+
+
