--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,3 +120,146 @@ body {
     transform: translateY(-10px);
   }
 }
+
+/* ButterflyAnimation.module.css */
+.stage {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 100vh;
+  width: 100%;
+  max-width: 900px;
+  overflow-y: hidden;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.mariposa {
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: 200px;
+  height: 200px;
+  opacity: 0;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
+  animation: fly 10s infinite linear;
+  animation-delay: 10s;
+}
+
+
+.mariposa-turn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 150px;
+  perspective: 1000px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  transform-origin: 50% 80%;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  animation: turn 3s infinite cubic-bezier(0.31, 0.09, 0.77, 1.5);
+  transform-style: preserve-3d;
+  filter: drop-shadow(50px 30px 10px rgba(0, 0, 0, 0.5));
+}
+
+.mariposa-flutter {
+  width: 2rem;
+  height: 8rem;
+  position: relative;
+  top: 0;
+  margin: 0 auto;
+  background: url("https://pngimg.com/uploads/butterfly/butterfly_PNG1056.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform-style: preserve-3d;
+  transform: rotateX(25deg) rotateY(5deg);
+}
+
+.mariposa-flutter::before,
+.mariposa-flutter::after {
+  position: absolute;
+  top: 5%;
+  margin: auto;
+  content: "";
+  height: 100%;
+  width: 250%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform-style: preserve-3d;
+  animation-delay: 0;
+}
+
+.mariposa-flutter::before {
+  background-image: url("https://pngimg.com/uploads/butterfly/butterfly_PNG1056.png");
+  transform-origin: 0% 50%;
+  animation: flutter-r 0.3s infinite ease-out;
+  left: 55%;
+}
+
+.mariposa-flutter::after {
+  background-image: url("https://pngimg.com/uploads/butterfly/butterfly_PNG1056.png");
+  transform-origin: 100% 50%;
+  animation: flutter-l 0.3s infinite ease-out;
+  right: 55%;
+}
+
+@keyframes flutter-r {
+  0%, 100% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(-40deg);
+  }
+}
+
+@keyframes flutter-l {
+  0%, 100% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(40deg);
+  }
+}
+
+@keyframes turn {
+  0%, 100% {
+    transform: translateX(-20%) rotateZ(30deg);
+  }
+  25% {
+    transform: translateX(50%) rotateZ(-30deg);
+  }
+  50% {
+    transform: translateX(-80%) rotateZ(30deg);
+  }
+  75% {
+    transform: translateX(30%) rotateZ(-30deg);
+  }
+}
+
+@keyframes fly {
+  0% {
+    opacity: 0;
+    transform: translateY(70vh);
+  }
+  3%, 99% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-70vh);
+  }
+}
