--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,26 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+* {
+  scrollbar-color: rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.404);
+  border-radius: 4px;
+}
+
+/* Scrollbar color */
+*::-webkit-scrollbar {
+  width:10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: linear-gradient(0deg, #dfb2fc 20%, #ed89cc 50%, #7e1ac1 91%);
+  border-radius: 4px;
+
+}
+
+*::-webkit-scrollbar-track {
+  background-color: rgb(243 232 255);
+  border-radius: 4px;
+}
 
 @keyframes moveTechStack {
   0% {
